--- a/คลินิกรักษาสิว.html
+++ b/คลินิกรักษาสิว.html
@@ -10,7 +10,49 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-  
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Product",
+  "name": "\u0E04\u0E25\u0E34\u0E19\u0E34\u0E01\u0E23\u0E31\u0E01\u0E29\u0E32\u0E2A\u0E34\u0E27",
+  "image": [
+    "https://www.กัญวราคลินิก.com/2341.jpg"
+  ],
+  "description": "\u0E04\u0E25\u0E34\u0E19\u0E34\u0E01\u0E23\u0E31\u0E01\u0E29\u0E32\u0E2A\u0E34\u0E27",
+  "sku": "2339",
+  "mpn": "999",
+  "brand": {
+    "@type": "Brand",
+    "name": "\u0E04\u0E25\u0E34\u0E19\u0E34\u0E01\u0E23\u0E31\u0E01\u0E29\u0E32\u0E2A\u0E34\u0E27"
+  },
+  "review": {
+    "@type": "Review",
+    "reviewRating": {
+      "@type": "Rating",
+      "ratingValue": "5",
+      "bestRating": "5"
+    },
+    "author": {
+      "@type": "Person",
+      "name": "\u0E1E\u0E0D.\u0E01\u0E31\u0E0D\u0E27\u0E23\u0E32 \u0E19\u0E27\u0E2D\u0E19\u0E38\u0E23\u0E31\u0E01\u0E29\u0E4C (\u0E2B\u0E21\u0E2D\u0E40\u0E2B\u0E21\u0E35\u0E48\u0E22\u0E27)"
+    }
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "2339"
+  },
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.กัญวราคลินิก.com",
+    "priceCurrency": "THB",
+    "price": "990",
+    "priceValidUntil": "2099-09-01",
+    "itemCondition": "https://schema.org/UsedCondition",
+    "availability": "https://schema.org/InStock"
+  }
+}
+</script>
   <!-- CSS รวมทั้งหมดในไฟล์เดียว -->
   <style>
     /* === Embedded Font: Kanit === */
@@ -481,8 +523,8 @@
   <header>
     <div class="container">
       <div class="logo">
-        <img src="images/logo.png" alt="โลโก้ Top Thai Clinic">
-        <span>Top Thai Clinic</span>
+        <img src="logo.png" alt="โลโก้ กัญวราคลินิก">
+        <span>กัญวราคลินิก</span>
       </div>
       <button class="hamburger" id="hamburger" aria-label="Menu">
         <span class="bar"></span>
@@ -504,13 +546,13 @@
 
   <!-- Floating Contact Buttons -->
   <div class="floating-buttons">
-    <a href="tel:022515588" class="floating-button call-button" aria-label="Call us">
+    <a href="tel:0917954884" class="floating-button call-button" aria-label="Call us">
       <i class="material-icons">phone</i>
     </a>
-    <a href="https://line.me/ti/p/%40topthaiclinic" class="floating-button line-button" aria-label="Line chat">
+    <a href="https://line.me/ti/p/%40kanwaraclinic" class="floating-button line-button" aria-label="Line chat">
       <i class="material-icons">chat</i>
     </a>
-    <a href="https://www.facebook.com/Topthaiclinic" class="floating-button messenger-button" aria-label="Facebook messenger">
+    <a href="https://www.facebook.com/kanwaraclinic" class="floating-button messenger-button" aria-label="Facebook messenger">
       <i class="material-icons">message</i>
     </a>
   </div>
@@ -522,7 +564,7 @@
       <div class="hero-highlights">
         <div class="highlight-item">
           <ul>
-            <li class="pi-text-bg-base2"><a class="pi-text-bg-base2" href="#Rank1"><span class="textnum">1</span> <u>M Vita Clinic</u></a></li>
+            <li class="pi-text-bg-base2"><a class="pi-text-bg-base2" href="#Rank1"><span class="textnum">1</span> <u>กัญวราคลินิก Clinic</u></a></li>
             <li class="pi-text-bg-base3"><a class="pi-text-bg-base3" href="#Rank2"><span class="textnum">2</span> <u>ตรีสุรางค์ คลินิก</u></a></li>
             <li class="pi-text-bg-base2"><a class="pi-text-bg-base2" href="#Rank3"><span class="textnum">3</span> <u>ลลิษาคลินิก</u></a></li>
             <li class="pi-text-bg-base3"><a class="pi-text-bg-base3" href="#Rank4"><span class="textnum">4</span> <u>ราชเทวีคลินิก</u></a></li>
@@ -572,15 +614,14 @@
   <h2>คลินิกรักษาสิวที่ไหนดี</h2>
 <p>คลินิกรักษาสิวที่ดี ควรต้องมีใบอนุญาตดำเนินการ สามารถเปิดกิจการได้อย่างถูกต้อง สถานที่ต้องสะอาดปลอดภัย ตัวยาผ่าน อ.ย. รับรองอย่างถูกต้อง เครื่องมือทางการแพทย์ต้องทันสมัย ซึ่งเห็นง่ายๆเลยจากการพูดถึง บอกต่อหรือการรีวิวจากคนจำนวนมาก โดยเราสามารถดูได้จากภาพก่อนรักษา-หลังรักษา ส่วนใหญ่คลินิกรักษาสิวที่ไหนดี ชื่อนี้จะมีการพูดถึงบ่อยในโลกออนไลน์</p>
 
-<h4>Top Thai Clinic ได้รวบรวมคลินิกความงามที่รักษาสิวที่ดีที่สุด ปี 2025 มาให้เลือกกัน</h4>
+<h4>Kanwara Clinic ได้รวบรวมคลินิกความงามที่รักษาสิวที่ดีที่สุด ปี 2025 มาให้เลือกกัน</h4>
 
 <!-- Clinic 1 -->
 <div id="Rank1">
-  <h3><span class="rank">1</span> M Vita Clinic</h3>
-  <img src="images/10-อันดับคลินิกรักษาสิว/1-MVita.jpg" alt="M Vita Clinic">
-  <p>อันดับ 1 ที่มาแรงในขณะนี้ ดูแลสิวและรอย เห็นผลอย่างรวดเร็ว ไม่เลี้ยงไข้ ติดอันดับต้นๆในหลายๆ เว็บไซต์ และมีรีวิวเคสที่รักษาหาย การันตีผลลัพธ์ เข้าสู่เคสที่ 8,000+ ต้องที่นี่ เอ็มวีต้าคลินิก อโศก เดินทางง่าย ใกล้ BTS และ MRT</p>
-  <p>M Vita Clinic เอ็มวีต้าคลินิก เปิดให้บริการตั้งแต่ปี 2553 และมีความเชี่ยวชาญในด้านการรักษาสิว และรอยสิวเป็นพิเศษ โดยแพทย์ประจำคลินิก คือ คุณหมอเอ็ม นพ. มนตรี อุดมประเสริฐกุล ซึ่งเป็นแพทย์ที่มีประสบการณ์ในการดูแลปัญหาผิวพรรณมายาวนานกว่า 12 ปี ได้ออกแบบการรักษาสิวที่เป็นขั้นตอนที่เป็นเอกลักษณ์เฉพาะ ที่แตกต่างจากที่อื่น คุ้มค่า คุ้มราคา และ ดีขึ้นอย่างแน่นอนเมื่อรักษาต่อเนื่อง</p>
-  <p><strong>ด้วยโปรแกรม <i>"แอคนิเคลียร์" (Acniclear)</i> ราคาเพียงครั้งละ 1,000 บาท, เฉลี่ยครั้งละ 720 บาท เมื่อซื้อคอร์ส 10 ครั้ง 7,200 บาท ซึ่งมีขั้นตอนต่างๆ ดังนี้</strong></p>
+  <h3><span class="rank">1</span> Kanwara Clinic</h3>
+  <img src="" alt="Kanwara Clinic">
+  <p>อันดับ 1 ที่มาแรงในขณะนี้ ดูแลสิวและรอย เห็นผลอย่างรวดเร็ว ไม่เลี้ยงไข้ ติดอันดับต้นๆในหลายๆ เว็บไซต์ และมีรีวิวเคสที่รักษาหาย การันตีผลลัพธ์ เข้าสู่เคสที่ 8,000+ ต้องที่นี่ กัญวราคลินิก</p>
+  <p>กัญวราคลินิก เปิดให้บริการตั้งแต่ปี 2558 และมีความเชี่ยวชาญในด้านการรักษาสิว และรอยสิวเป็นพิเศษ โดยแพทย์ประจำคลินิก คือ คุณหมอเหมี่ยว แพทย์หญิง กัญวรา นวอนุรักษ์ ซึ่งเป็นแพทย์ที่มีประสบการณ์ในการดูแลปัญหาผิวพรรณมายาวนานกว่า 12 ปี ได้ออกแบบการรักษาสิวที่เป็นขั้นตอนที่เป็นเอกลักษณ์เฉพาะ ที่แตกต่างจากที่อื่น คุ้มค่า คุ้มราคา และ ดีขึ้นอย่างแน่นอนเมื่อรักษาต่อเนื่อง</p>
   <ul>
     <li>ทำความสะอาดผิว 2 ขั้นตอน อย่างล้ำลึก เพื่อให้พร้อมก่อนเข้าสู่ขั้นตอนการรักษาสิว ให้มีประสิทธิภาพสูงที่สุด</li>
     <li>Tangerine Peel ผลัดเซลผิวแบบอ่อนโยนด้วยกรดผลไม้สูตรสำหรับผิวแพ้ง่าย ลดการอุดตัน ลดรอยสิว และช่วยให้กดสิวง่ายขึ้น</li>
@@ -591,15 +632,15 @@
     <li>ฉีดสิวอักเสบ โดยคุณหมอ ให้สิวยุบบวมไว</li>
     <li>รับยาทาครั้งละ 4 ชิ้น และยารับประทาน 1 ชุดอีกด้วย เพื่อให้คนไข้ได้ทายารักษาต่อที่บ้าน ผลการรักษาจึงดี โดยไม่ต้องมีค่าใช้จ่ายเพิ่ม</li>
   </ul>
-  <p><u>สำหรับท่านที่เป็นสิวเยอะ และมีรอยด้วย</u> ทางเอ็มวีต้าคลินิกยังมีอีกหนึ่งโปรแกรมที่เป็นที่นิยมมาก สิวและรอยหายเร็วมากที่สุด (best seller) หลังทำเพียงครั้งแรก คนไข้จะรู้สึกได้ว่าดีขึ้นอย่างชัดเจน นั่นคือโปรแกรม <strong><i>เมดิแอคเคลียร์ MEDIACLEAR</i></strong> <strong>ราคาครั้งละ 3,500 บาท</strong> ซึ่งมีขั้นตอนที่ครบถ้วนเหมือน แอคนิเคลียร์ ทุกอย่าง และเพิ่มการดูแลด้วยเลเซอร์ที่ทันสมัยผ่านมาตรฐานระดับโลก จากประเทศเยอรมัน คือ Quatra Pro Yellow ไม่ทำให้ผิวบาง แถมช่วยให้แข็งแรงยิ่งขึ้น จะทำให้ผิวดูเกลี้ยงใส ลดรอย ฆ่าเชื้อสิว และปัญหาผิวอักเสบ จึงทำให้ผลลัพธ์ดีขึ้นเร็ว x2 เหมาะกับท่านที่ต้องการให้ผิวที่เป็นสิวกลับมาใสอย่างรวดเร็ว</p>
-  <p><strong>ที่อยู่ :</strong> เอ็มวีต้าคลินิก คลินิกรักษาสิว เลเซอร์รอยสิว 235-235/1 ถนนสุขุมวิท แขวง คลองเตยเหนือ, เขตวัฒนา กรุงเทพมหานคร 10110</p>
+  <p><u>สำหรับท่านที่เป็นสิวเยอะ และมีรอยด้วย</u> ทางกัญวราคลินิกยังมีอีกหนึ่งโปรแกรมที่เป็นที่นิยมมาก สิวและรอยหายเร็วมากที่สุด (best seller) หลังทำเพียงครั้งแรก คนไข้จะรู้สึกได้ว่าดีขึ้นอย่างชัดเจน นั่นคือโปรแกรม <strong><i>เมดิแอคเคลียร์ MEDIACLEAR</i></strong> <strong>ราคาครั้งละ 3,500 บาท</strong> ซึ่งมีขั้นตอนที่ครบถ้วนเหมือน แอคนิเคลียร์ ทุกอย่าง และเพิ่มการดูแลด้วยเลเซอร์ที่ทันสมัยผ่านมาตรฐานระดับโลก จากประเทศเยอรมัน คือ Quatra Pro Yellow ไม่ทำให้ผิวบาง แถมช่วยให้แข็งแรงยิ่งขึ้น จะทำให้ผิวดูเกลี้ยงใส ลดรอย ฆ่าเชื้อสิว และปัญหาผิวอักเสบ จึงทำให้ผลลัพธ์ดีขึ้นเร็ว x2 เหมาะกับท่านที่ต้องการให้ผิวที่เป็นสิวกลับมาใสอย่างรวดเร็ว</p>
+  <p><strong>ที่อยู่ :</strong> กัญวราคลินิก คลินิกรักษาสิว 104/9 หมู่บ้านไอดีไซน์, แขวงบางชัน, เขตคลองสามวา, กรุงเทพมหานคร 10510</p>
   <h5><u>ช่องทางการติดต่อ</u></h5>
-  <p><i class="fab fa-line"></i> : <a href="https://line.me/R/ti/p/@mvitaclinic" target="_blank"> @mvitaclinic</a></p>
-  <p><i class="fa fa-facebook-square"></i> : <a href="https://www.facebook.com/mvitaclinic.thailand" target="_blank"> facebook.com/M Vita Clinic</a></p>
-  <p><i class="fa fa-globe"></i> : <a href="https://www.mvitaclinic.com" target="_blank"> www.mvitaclinic.com</a></p>
-  <p><i class="fa fa-instagram"></i> : <a href="https://www.instagram.com/mvitaclinicofficial/" target="_blank"> mvitaclinicofficial</a></p>
-  <p><i class="fa fa-phone-square"></i> : <a href="tel:026408097" target="_blank"> 02-640-8097</a></p>
-  <p><i class="fa fa-map-marker"></i> แผนที่ เอ็มวีต้าคลินิก: <a href="https://www.google.com/maps/place/%E0%B9%80%E0%B8%AD%E0%B9%87%E0%B8%A1%E0%B8%A7%E0%B8%B5%E0%B8%95%E0%B9%89%E0%B8%B2%E0%B8%84%E0%B8%A5%E0%B8%B4%E0%B8%99%E0%B8%B4%E0%B8%81/@13.7465849,100.5605663,17z/data=!3m1!4b1!4m5!3m4!1s0x30e29eefdb1574c9:0xc4c89c49c31f457e!8m2!3d13.7465849!4d100.562755?entry=yt" target="_blank"> Click Here</a></p>
+  <p><i class="fab fa-line"></i> : <a href="https://line.me/R/ti/p/@Kanwaraclinic" target="_blank"> @kanwaraclinic</a></p>
+  <p><i class="fa fa-facebook-square"></i> : <a href="https://www.facebook.com/kanwaraclinic" target="_blank"> facebook.com/KanwaraClinic</a></p>
+  <p><i class="fa fa-globe"></i> : <a href="https://www.กัญวราคลินิก.com" target="_blank"> www.กัญวราคลินิก.com</a></p>
+  <p><i class="fa fa-instagram"></i> : <a href="https://www.instagram.com/kanwaraclinic/" target="_blank"> mvitaclinicofficial</a></p>
+  <p><i class="fa fa-phone-square"></i> : <a href="tel:0917954884" target="_blank">0917954884</a></p>
+  <p><i class="fa fa-map-marker"></i> แผนที่ กัญวราคลินิก: <a href="https://g.page/kanwara_clinic" target="_blank"> Click Here</a></p>
 </div>
 
 <!-- Clinic 2 -->
