--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-  <title>กัญวราคลินิก คลินิกรักษาสิว หลุมสิว รูขุมขน ยกกระชับผิวหน้า Ultraformer Venus viva</title>
+  <title>กัญวราคลินิก คลินิกรักษาสิว หลุมสิว รูขุมขน ยกกระชับผิวหน้า โปรแกรม Ultraformer Venus viva</title>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="logo.png">
   <!-- Google Material Icons -->
@@ -454,12 +454,12 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="container">
-      <h1>คลินิกผิวพรรณและความงามครบวงจร</h1>
-      <p class="hero-main-text">รักษาสิว ลดรอยสิว ยกกระชับผิวหน้า โดยแพทย์ผู้เชี่ยวชาญแพทย์ประจำคลินิก พญ.กัญวรา นวอนุรักษ์ (หมอเหมี่ยว) ด้วยแนวคิดที่ต้องการให้คนไข้ทุกคนดูดีในแบบของตัวเอง พร้อมเครื่องมือและผลิตภัณฑ์ที่มีมาตรฐานปลอดภัย ภายใต้การดูแลบริการที่เป็นกันเอง อบอุ่น สบายใจ ด้วยราคาที่เอื้อมถึงได้</p>
+      <h1>คลินิกผิวพรรณและความงาม</h1>
+      <p class="hero-main-text">รักษาสิว ลดรอยสิว ยกกระชับผิวหน้า โดยแพทย์ประจำคลินิก พญ.กัญวรา นวอนุรักษ์ (หมอเหมี่ยว) ด้วยแนวคิดที่ต้องการให้คนไข้ทุกคนดูดีในแบบของตัวเอง พร้อมเครื่องมือและผลิตภัณฑ์ที่มีมาตรฐาน ภายใต้การดูแลบริการที่เป็นกันเอง อบอุ่น สบายใจ ด้วยราคาที่เอื้อมถึงได้</p>
       <div class="hero-highlights">
         <p class="highlight-item">✦ ดูแลคนไข้ทุกคนด้วยใจ</p>
-        <p class="highlight-item">✦ แพทย์ประสบการณ์กว่า 10 ปี</p>
-        <p class="highlight-item">✦ ผลิตภัณฑ์ และอุปกรณ์​มีมาตรฐาน</p>
+        <p class="highlight-item">✦ แพทย์ผู้มีประสบการณ์</p>
+        <p class="highlight-item">✦ ผลิตภัณฑ์ และ อุปกรณ์​มีมาตรฐาน</p>
       </div>
     </div>
   </section>
@@ -474,7 +474,7 @@
         <div class="about-text">
           <h2>เกี่ยวกับเรา</h2>
           <p>
-            กัญวราคลินิกเปิดให้บริการตั้งแต่ปี พ.ศ. 2558 ดูแลปัญหาผิวหน้าด้วยเทคโนโลยีทันสมัยและผลิตภัณฑ์คุณภาพ พร้อมทีมแพทย์ที่มีประสบการณ์มากกว่า 10 ปี เพื่อให้คุณดูดีในแบบของตัวเอง
+            กัญวราคลินิกเปิดให้บริการตั้งแต่ปี พ.ศ. 2558 ดูแลปัญหาผิวหน้าด้วยเทคโนโลยีทันสมัยและผลิตภัณฑ์คุณภาพ พร้อมทีมแพทย์ที่มีประสบการณ์ เพื่อให้คุณดูดีในแบบของตัวเอง
           </p>
         </div>
       </div>
@@ -580,12 +580,12 @@
         <div class="grid-item">
           <h3>รักษารอยแดงดำ</h3>
           <p>ปรับสภาพผิวให้เรียบเนียน ลดรอยแดงดำได้อย่างเห็นผล</p>
-          <div class="image-grid">
+          <!--div class="image-grid">
             <img src="โปรแกรมรักษาสิว-รอยสิว-ด้วยเลเซอร์-1500.png" alt="โปรแกรมรักษาสิว รอยสิว ด้วยเลเซอร์" width="250" height="150">
 	    <img src="โปรแกรมรักษาสิว-รอยสิว-ด้วยเลเซอร์-1.jpg" alt="โปรแกรมรักษาสิว รอยสิว ด้วยเลเซอร์" width="250" height="150">
 	    <img src="โปรแกรมรักษาสิว-รอยสิว-ด้วยเลเซอร์-2.jpg" alt="โปรแกรมรักษาสิว รอยสิว ด้วยเลเซอร์" width="250" height="150">
 	    <img src="โปรแกรมรักษาสิว-รอยสิว-ด้วยเลเซอร์-3.jpg" alt="โปรแกรมรักษาสิว รอยสิว ด้วยเลเซอร์" width="250" height="150">
-          </div>
+	</div-->
         </div>
         <div class="grid-item">
           <h3>เลเซอร์ฝ้า</h3>
@@ -612,7 +612,7 @@
   </section>
 
   <!-- Products Section -->
-  <section class="products">
+  <!--section class="products">
     <div class="container">
       <h2>ผลิตภัณฑ์และเทคโนโลยี</h2>
       <div class="grid">
@@ -628,7 +628,7 @@
         </div>
       </div>
     </div>
-  </section>
+</section-->
 
 
 
