--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
     <div class="container">
       <div class="about-content">
         <div class="about-image">
-          <img src="กัญวราคลินิกรักษาสิว.png" alt="กัญวราคลินิกรักษาสิว" class="clinic-image">
+          <!--img src="กัญวราคลินิกรักษาสิว.png" alt="กัญวราคลินิกรักษาสิว" class="clinic-image"-->
         </div>
         <div class="about-text">
           <h2>เกี่ยวกับเรา</h2>
@@ -482,7 +482,7 @@
   </section>
 
   <!-- popular-services Section -->
-<section class="popular-services">
+<!--section class="popular-services">
   <div class="container">
     <h2>บริการยอดนิยม</h2>
     <div class="video-grid">
@@ -561,9 +561,9 @@
       }
     }
   </style>
-</section>
+</section-->
   <!-- Services Section -->
-  <section class="services">
+  <!--section class="services">
     <div class="container">
       <h2>บริการเด่นของเรา</h2>
       <div class="grid">
@@ -580,12 +580,12 @@
         <div class="grid-item">
           <h3>รักษารอยแดงดำ</h3>
           <p>ปรับสภาพผิวให้เรียบเนียน ลดรอยแดงดำได้อย่างเห็นผล</p>
-          <!--div class="image-grid">
+          <div class="image-grid">
             <img src="โปรแกรมรักษาสิว-รอยสิว-ด้วยเลเซอร์-1500.png" alt="โปรแกรมรักษาสิว รอยสิว ด้วยเลเซอร์" width="250" height="150">
 	    <img src="โปรแกรมรักษาสิว-รอยสิว-ด้วยเลเซอร์-1.jpg" alt="โปรแกรมรักษาสิว รอยสิว ด้วยเลเซอร์" width="250" height="150">
 	    <img src="โปรแกรมรักษาสิว-รอยสิว-ด้วยเลเซอร์-2.jpg" alt="โปรแกรมรักษาสิว รอยสิว ด้วยเลเซอร์" width="250" height="150">
 	    <img src="โปรแกรมรักษาสิว-รอยสิว-ด้วยเลเซอร์-3.jpg" alt="โปรแกรมรักษาสิว รอยสิว ด้วยเลเซอร์" width="250" height="150">
-	</div-->
+	</div>
         </div>
         <div class="grid-item">
           <h3>เลเซอร์ฝ้า</h3>
@@ -609,7 +609,7 @@
         </div>
       </div>
     </div>
-  </section>
+</section-->
 
   <!-- Products Section -->
   <!--section class="products">
