--- a/index.html
+++ b/index.html
@@ -631,6 +631,9 @@
 </section-->
 
   <!-- Reviews Section -->
+<section class="reviews">
+    <div class="container">
+      <h2>รีวิวจากลูกค้าจริง</h2>	
     <div class="review-slider">
         <div class="slide-counter">
             <span id="currentSlide">1</span> / 8
@@ -749,7 +752,7 @@
           </div>
           
         </div>
-
+</section>
 
   <!-- Reviews Section -->
 
