--- a/index.html
+++ b/index.html
@@ -631,6 +631,7 @@
 </section-->
 
   <!-- Reviews Section -->
+<section class="reviews">
     <div class="review-slider">
         <div class="slide-counter">
             <span id="currentSlide">1</span> / 8
@@ -805,7 +806,8 @@
         // Auto-play
         setInterval(nextSlide, 5000);
     </script>
-
+</section>
+	
   <!-- Reviews Section -->
 
 <section class="reviews">
