--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
   <section class="hero">
     <div class="container">
       <h1>คลินิกผิวพรรณและความงาม</h1>
-      <p class="hero-main-text">รักษาสิว ลดรอยสิว ยกกระชับผิวหน้า โดยแพทย์ประจำคลินิก พญ.กัญวรา นวอนุรักษ์ (หมอเหมี่ยว) ด้วยแนวคิดที่ต้องการให้คนไข้ทุกคนดูดีในแบบของตัวเอง พร้อมเครื่องมือและผลิตภัณฑ์ที่มีมาตรฐาน ภายใต้การดูแลบริการที่เป็นกันเอง อบอุ่น สบายใจ ด้วยราคาที่เอื้อมถึงได้</p>
+      <p class="hero-main-text">รักษาสิว ลดรอยสิว ยกกระชับผิวหน้า โดยแพทย์ประจำคลินิก พญ.กัญวรา นวอนุรักษ์ (หมอเหมี่ยว) ด้วยแนวคิดที่ต้องการให้คนไข้ทุกคนดูดีในแบบของตัวเอง พร้อมเครื่องมือและผลิตภัณฑ์ที่มีมาตรฐาน ภายใต้การดูแลบริการที่เป็นกันเอง อบอุ่น สบายใจ เป็น<a href='./คลินิกรักษาสิว-กรุงเทพ.html' rel=dofollow alt='คลินิกรักษาสิว กรุงเทพ' title='คลินิกรักษาสิว กรุงเทพ' desc='คลินิกรักษาสิว กรุงเทพ'>คลินิกรักษาสิว ใน กรุงเทพฯ</a>ด้วยราคาที่เอื้อมถึงได้</p>
       <div class="hero-highlights">
         <p class="highlight-item">✦ ดูแลคนไข้ทุกคนด้วยใจ</p>
         <p class="highlight-item">✦ แพทย์ผู้มีประสบการณ์</p>
