--- a/คลินิกรักษาสิว-กรุงเทพ.html
+++ b/คลินิกรักษาสิว-กรุงเทพ.html
@@ -43,7 +43,7 @@
     section h1, section h2 { text-align: center; margin-bottom: 40px; font-size: 38px; color: #235E6E; font-weight: 600; }
     section h3 { font-size: 24px; color: #235E6E; margin-bottom: 15px; font-weight: 500; }
     p { margin-bottom: 20px; font-size: 17px; text-align: justify; }
-    ul { list-style-position: inside; padding-left: 20px; margin-bottom: 20px; }
+    ul { list-style-position: inside; padding-left: 20px; }
     li { margin-bottom: 10px; }
     strong { color: #235E6E; }
 
