--- a/index.html
+++ b/index.html
@@ -617,11 +617,11 @@
       </button>
       <nav>
         <ul id="nav-menu">
-          <li><a href="#">หน้าหลัก</a></li>
+          <li><a href="index.html">หน้าหลัก</a></li>
           <li><a href="#">เกี่ยวกับเรา</a></li>
-          <li><a href="#">ข้อมูลแพทย์</a></li>
+          <li><a href="หมอรักษาสิว.html">ข้อมูลแพทย์</a></li>
           <li><a href="#">บริการของเรา</a></li>
-          <li><a href="#">บทความ</a></li>
+          <li><a href="คลินิกรักษาสิว-กรุงเทพ.html">บทความ</a></li>
           <li><a href="#">รีวิว</a></li>
           <li><a href="#">ติดต่อเรา</a></li>
         </ul>
