Add services page (บริการ.html) and update navigation links

--- a/คลินิกรักษาสิว-กรุงเทพ.html
+++ b/คลินิกรักษาสิว-กรุงเทพ.html
@@ -120,7 +120,7 @@
           <li><a href="index.html">หน้าหลัก</a></li>
           <li><a href="#">เกี่ยวกับเรา</a></li>
           <li><a href="หมอรักษาสิว.html">ข้อมูลแพทย์</a></li>
-          <li><a href="#">บริการของเรา</a></li>
+          <li><a href="บริการ.html">บริการของเรา</a></li>
           <li><a href="คลินิกรักษาสิว-กรุงเทพ.html">บทความ</a></li>
           <li><a href="#">รีวิว</a></li>
           <li><a href="#">ติดต่อเรา</a></li>
