--- a/หมอรักษาสิว.html
+++ b/หมอรักษาสิว.html
@@ -312,7 +312,7 @@
           <li><a href="index.html">หน้าหลัก</a></li>
           <li><a href="หมอรักษาสิว.html">ข้อมูลแพทย์</a></li>
           <li><a href="คลินิกรักษาสิว-กรุงเทพ.html">บทความ</a></li>
-          <li><a href="#contact">ติดต่อเรา</a></li>
+          <li><a href="บริการ.html">บริการของเรา</a></li>
         </ul>
       </nav>
     </div>
